exports[`big size`] = `
<div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
          }
        }>
        <h1
          style={
            Object {
              "fontSize": 35,
              "margin": "20px 0 0 0",
              "padding": 0,
            }
          }>
          FlatToppedHex
        </h1>
        <h2
          style={
            Object {
              "fontSize": 22,
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }>
          big size
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <svg
        height="500"
        style={
          Object {
            "border": "1px solid",
          }
        }
        width="500">
        <polygon
          points="500,250 375,466.50635094610965 125.00000000000006,466.5063509461097 0,250.00000000000003 124.99999999999989,33.49364905389041 375,33.49364905389035"
          size={250}
          x={250}
          y={250} />
      </svg>
    </div>
  </div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }>
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                svg
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    width
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        500
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    height
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        500
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    style
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            border
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }>
                            \"
                            1px solid
                            \"
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                >
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                FlatToppedHex
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    x
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          250
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    y
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          250
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    size
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          250
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                </
                svg
                >
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            FlatToppedHex
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  size
                </td>
                <td>
                  number
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  x
                </td>
                <td>
                  number
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  y
                </td>
                <td>
                  number
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pass through props`] = `
<div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
          }
        }>
        <h1
          style={
            Object {
              "fontSize": 35,
              "margin": "20px 0 0 0",
              "padding": 0,
            }
          }>
          FlatToppedHex
        </h1>
        <h2
          style={
            Object {
              "fontSize": 22,
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }>
          pass through props
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <svg
        height="500"
        style={
          Object {
            "border": "1px solid",
          }
        }
        width="500">
        <polygon
          fill="white"
          onClick={[Function]}
          onMouseEnter={[Function]}
          points="300,250 275,293.30127018922195 225,293.30127018922195 200,250 224.99999999999997,206.69872981077808 275,206.69872981077808"
          size={50}
          stroke="black"
          strokeWidth="10"
          transform="rotate(15,250,250)"
          x={250}
          y={250} />
      </svg>
    </div>
  </div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }>
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                svg
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    width
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        500
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    height
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        500
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    style
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            border
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }>
                            \"
                            1px solid
                            \"
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                >
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                FlatToppedHex
              </span>
              <span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    x
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          250
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    y
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          250
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    size
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          50
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    fill
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        white
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    stroke
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        black
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    strokeWidth
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        10
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    transform
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        rotate(15,250,250)
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    onClick
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          anonymous()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    onMouseEnter
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          anonymous()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <br />
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                </
                svg
                >
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            FlatToppedHex
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  size
                </td>
                <td>
                  number
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  x
                </td>
                <td>
                  number
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  y
                </td>
                <td>
                  number
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`place in corner`] = `
<div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
          }
        }>
        <h1
          style={
            Object {
              "fontSize": 35,
              "margin": "20px 0 0 0",
              "padding": 0,
            }
          }>
          FlatToppedHex
        </h1>
        <h2
          style={
            Object {
              "fontSize": 22,
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }>
          place in corner
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <svg
        height="500"
        style={
          Object {
            "border": "1px solid",
          }
        }
        width="500">
        <polygon
          points="50,0 25.000000000000007,43.30127018922193 -24.99999999999999,43.30127018922194 -50,6.123233995736766e-15 -25.00000000000002,-43.30127018922192 25.000000000000007,-43.30127018922193"
          size={50}
          x={0}
          y={0} />
      </svg>
    </div>
  </div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }>
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                svg
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    width
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        500
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    height
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        500
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    style
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            border
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }>
                            \"
                            1px solid
                            \"
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                >
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                FlatToppedHex
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    x
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          0
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    y
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          0
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    size
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          50
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                </
                svg
                >
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            FlatToppedHex
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  size
                </td>
                <td>
                  number
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  x
                </td>
                <td>
                  number
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  y
                </td>
                <td>
                  number
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`simple usage`] = `
<div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
          }
        }>
        <h1
          style={
            Object {
              "fontSize": 35,
              "margin": "20px 0 0 0",
              "padding": 0,
            }
          }>
          FlatToppedHex
        </h1>
        <h2
          style={
            Object {
              "fontSize": 22,
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }>
          simple usage
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <svg
        height="500"
        style={
          Object {
            "border": "1px solid",
          }
        }
        width="500">
        <polygon
          points="300,250 275,293.30127018922195 225,293.30127018922195 200,250 224.99999999999997,206.69872981077808 275,206.69872981077808"
          size={50}
          x={250}
          y={250} />
      </svg>
    </div>
  </div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }>
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }>
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                svg
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    width
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        500
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    height
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        500
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    style
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }>
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }>
                            border
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }>
                            \"
                            1px solid
                            \"
                          </span>
                          }
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                >
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                FlatToppedHex
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    x
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          250
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    y
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          250
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    size
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }>
                          50
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                </
                svg
                >
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }>
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }>
            \"
            FlatToppedHex
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  size
                </td>
                <td>
                  number
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  x
                </td>
                <td>
                  number
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  y
                </td>
                <td>
                  number
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
